Update .gitignore, README, and pom.xml; remove client and server batch files